--- a/index.html
+++ b/index.html
@@ -60,13 +60,19 @@
         <div class="home-content" id="home">
             <div class="intro-text">
                 <div class="intro-title" data-aos="fade-right" data-aos-duration="500" data-aos-delay="200">
-                    <p>WELCOME <span>NEUST</span><span>IANS</span>!</p>
+                    <p>WELCOME</p>
+                    <p>students of</p>
                 </div>
                 <div class="intro-subtitle" data-aos="fade-right" data-aos-duration="500" data-aos-delay="400">
-                    <p>COLLEGE OF</p>
-                    <p>INFORMATION <span>AND</span></p>
-                    <p>COMMUNICATIONS</p>
-                    <p>TECHNOLOGY</p>
+                    <div class="intro-subtitle1">
+                        <p>CICT</p>
+                    </div>
+                    <div class="intro-subtitle2">
+                        <p>COLLEGE OF</p>
+                        <p>INFORMATION <span>AND</span></p>
+                        <p>COMMUNICATIONS</p>
+                        <p>TECHNOLOGY</p>
+                    </div>
                 </div>
             </div>
             <div class="shape-container">
@@ -453,7 +459,7 @@
                             </div>
                             <div class="sub-card-bottom">
                                 <div class="sub-card-bottom-left">
-                                    Alcantara, Jiezel V.
+                                    Alcantara, Jiezel
                                 </div>
                                 <div class="sub-card-bottom-right">
                                     <button class="btnn t-3 schedbutton">Enter <i class="fa-solid fa-chevron-right"></i></button>
@@ -554,7 +560,7 @@
                                                         - No Classes, orientation only at Open Gym 8am to 12nn
                                                     </li>
                                                     <li class="topic-item">
-                                                        Source: <a href="https://m.facebook.com/story.php?story_fbid=pfbid02nfZcSAAVm44TPHt9GAumnV3HDySuTjGigWyspkYmLeST87Mev3Gt6tzEuPKxeVZvl&id=100063576801635&mibextid=CDWPTG" target="_blank">CICT LSG</a>
+                                                        Source: <a href="https://"></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -611,9 +617,6 @@
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
                                                         - No Classes Orientation only at Open Gym 8am to 12nn
-                                                    </li>
-                                                    <li class="topic-item">
-                                                        Source: <a href="https://m.facebook.com/story.php?story_fbid=pfbid02nfZcSAAVm44TPHt9GAumnV3HDySuTjGigWyspkYmLeST87Mev3Gt6tzEuPKxeVZvl&id=100063576801635&mibextid=CDWPTG" target="_blank">CICT LSG</a>
                                                     </li>
                                                 </ul>
                                             </div>
