--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
                                                         - No Classes, orientation only at Open Gym 8am to 12nn
                                                     </li>
                                                     <li class="topic-item">
-                                                        Source: <a href="https://"></a>
+                                                        Source: <a href="https://m.facebook.com/story.php?story_fbid=pfbid0j7p697e8Bdzfps3rFWT1tiKHD3XzqENw7AazpTbxqriiJeeaoBtE66tSohbJcnY3l&id=100063576801635&mibextid=V3Yony" target="_blank"></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -616,7 +616,10 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - No Classes Orientation only at Open Gym 8am to 12nn
+                                                        - No Classes, orientation only at Open Gym 8am to 12nn
+                                                    </li>
+                                                    <li class="topic-item">
+                                                        Source: <a href="https://m.facebook.com/story.php?story_fbid=pfbid0j7p697e8Bdzfps3rFWT1tiKHD3XzqENw7AazpTbxqriiJeeaoBtE66tSohbJcnY3l&id=100063576801635&mibextid=V3Yony" target="_blank"></a>
                                                     </li>
                                                 </ul>
                                             </div>
