--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             </div>
             <div class="team">
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="500">
-                    <img src="images/officercard.png" alt="Officer 2">
+                    <img src="images/officer2.png" alt="Officer 2">
                     <div class="officer-details">
                         <!-- <div class="circle"></div> -->
                         <h3>VICE PRESIDENT</h3>
@@ -117,7 +117,7 @@
                     </div>
                 </div>
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="700">
-                    <img src="images/officercard.png" alt="Officer 3">
+                    <img src="images/officer3.png" alt="Officer 3">
                     <div class="officer-details">
                         <!-- <div class="circle"></div> -->
                         <h3>SECRETARY</h3>
@@ -133,7 +133,7 @@
                     </div>
                 </div>
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="1100">    
-                    <img src="images/officercard.png" alt="Officer 5">
+                    <img src="images/officer5.png" alt="Officer 5">
                     <div class="officer-details">
                         <!-- <div class="circle"></div> -->
                         <h3>TREASURER</h3>
@@ -149,7 +149,7 @@
                     </div>
                 </div>
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="1500">
-                    <img src="images/officercard.png" alt="Officer 6">
+                    <img src="images/officer6.png" alt="Officer 6">
                     <div class="officer-details">
                         <!-- <div class="circle"></div> -->
                         <h3>P.R.O.</h3>
@@ -560,7 +560,7 @@
                                                         - No Classes, orientation only at Open Gym 8am to 12nn
                                                     </li>
                                                     <li class="topic-item">
-                                                        Source: <a href="https://m.facebook.com/story.php?story_fbid=pfbid0j7p697e8Bdzfps3rFWT1tiKHD3XzqENw7AazpTbxqriiJeeaoBtE66tSohbJcnY3l&id=100063576801635&mibextid=V3Yony" target="_blank">CICT LSG</a>
+                                                        Source: <a href="https://"></a>
                                                     </li>
                                                 </ul>
                                             </div>
@@ -616,10 +616,7 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - No Classes, orientation only at Open Gym 8am to 12nn
-                                                    </li>
-                                                    <li class="topic-item">
-                                                        Source: <a href="https://m.facebook.com/story.php?story_fbid=pfbid0j7p697e8Bdzfps3rFWT1tiKHD3XzqENw7AazpTbxqriiJeeaoBtE66tSohbJcnY3l&id=100063576801635&mibextid=V3Yony" target="_blank">CICT LSG</a>
+                                                        - No Classes Orientation only at Open Gym 8am to 12nn
                                                     </li>
                                                 </ul>
                                             </div>
