--- a/index.html
+++ b/index.html
@@ -401,7 +401,10 @@
                                                     <div class="dropdown-menu">
                                                         <ul class="module-list">
                                                             <li class="module-item">
-                                                                <a href="" download><i class="fa-regular fa-file-pdf"></i></a>
+                                                                <a href="FILES/PE 1/PATHFit-1-Module-Unit-2.pdf" download><i class="fa-regular fa-file-pdf"></i> PATHFit-1-Module-Unit-2 PDF</a>
+                                                            </li>
+                                                            <li class="module-item">
+                                                                <a href="FILES/PE 1/PATHFit-1-Module-Unit-2.docx" download><i class="fa-regular fa-file-word"></i> PATHFit-1-Module-Unit-2 DOCX</a>
                                                             </li>
                                                         </ul>
                                                     </div>
