--- a/index.html
+++ b/index.html
@@ -729,7 +729,10 @@
                                                     <div class="dropdown-menu">
                                                         <ul class="module-list">
                                                             <li class="module-item">
-                                                                <a href="FILES/ITNET01/ITNET01.pdf" download><i class="fa-regular fa-file-pdf"></i> Little Reviewer</a>
+                                                                <a href="FILES/ITNET01/ITNET01_.pdf" download><i class="fa-regular fa-file-pdf"></i> Unofficial* Module 10 CHAPTERS</a>
+                                                            </li>
+                                                            <li class="module-item">
+                                                            Source <a href="https://bsit1a2324.s3.us-west-1.amazonaws.com/ITNET01/ITNET01+Reference+Book.pdf"><i class="fa-regular fa-link"></i> bsit1a2324.s3.us-west-1.amazonaws.com</a>
                                                             </li>
                                                         </ul>
                                                     </div>
