--- a/index.html
+++ b/index.html
@@ -732,7 +732,7 @@
                                                                 <a href="FILES/ITNET01/ITNET01_.pdf" download><i class="fa-regular fa-file-pdf"></i> Unofficial* Module 10 CHAPTERS</a>
                                                             </li>
                                                             <li class="module-item">
-                                                            Source <a href="https://bsit1a2324.s3.us-west-1.amazonaws.com/ITNET01/ITNET01+Reference+Book.pdf"><i class="fa-regular fa-link"></i> bsit1a2324.s3.us-west-1.amazonaws.com</a>
+                                                            Source <a href="https://bsit1a2324.s3.us-west-1.amazonaws.com/ITNET01/ITNET01+Reference+Book.pdf"><i class="fa-solid fa-link"></i> bsit1a2324.s3.us-west-1.amazonaws.com</a>
                                                             </li>
                                                         </ul>
                                                     </div>
