--- a/index.html
+++ b/index.html
@@ -221,10 +221,7 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        <i>"1a and 1b, no klases AGEN on mandey, sept 11 bikos ay heb tu gow tu penyaranda op kampus on opisyal bisnes... hmmmp..."</i>
-                                                    </li>
-                                                    <li class="topic-item">
-                                                        <i>- Ma'am Avree 9/8/2023 Friday 5:47 PM</i>
+                                                        <i>cc101, we will be discussing unit 3 next week... print S5, S6, and S7 from the module in short bond papers, then answer... to be passed next meeting...</i>
                                                     </li>
                                                 </ul>
                                             </div>
