--- a/index.html
+++ b/index.html
@@ -873,10 +873,11 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - WHAT IS INDIGENOUS SCIENCE?
+                                                    QUIZ 1 (2 SETS)
+                                                        set1 - Online via Google Classroom (7:00pm - 8:30pm)
                                                     </li>
                                                     <li class="topic-item">
-                                                        - How would you define indigenous science?
+                                                        set2 - Face to face
                                                     </li>
                                                 </ul>
                                             </div>
