--- a/index.html
+++ b/index.html
@@ -873,7 +873,10 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                    QUIZ 1 (2 SETS)
+                                                        QUIZ 1 - 2 SETS
+                                                    </li>
+                                                    <li class="topic-item">
+                                                    
                                                         set1 - Online via Google Classroom (7:00pm - 8:30pm)
                                                     </li>
                                                     <li class="topic-item">
