--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </label>
                     </li>
                 </ul>
-                <a href="https://www.facebook.com/CICTLocalStudentGovernment" target="_blank" class="nav-logo"
+                <a href="https://neust.edu.ph/" target="_blank" class="nav-logo"
                     data-aos="fade-left" data-aos-duration="500" data-aos-delay="300">
                     <img src="images/NEUST.png" alt="cict">
                 </a>
