--- a/index.html
+++ b/index.html
@@ -230,7 +230,10 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - Read UNIT IV
+                                                        Assignment
+                                                    </li>
+                                                    <li class="topic-item">
+                                                        Draw a fc that will input the year of birth of a person & determine, his age. Compute & display the area of a rectangle if he is 18 years old or less & the area of a triangle if not
                                                     </li>
                                                 </ul>
                                             </div>
