--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>CC-101</span></p>
                                     <p>Computer Programming 1, Fundamentals</p>
-                                    <p>M 9:00 AM - 12:00 PM</p>
+                                    <p>M 10:00 AM - 12:00 PM</p>
                                     <p>RM 306</p>
                                     <div id="schedule1" class="schedule"></div>
                                     <img src="images/helloKitty.png" alt="hellokitty">
@@ -229,12 +229,8 @@
                                             <div class="topic-body">
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
-                                                    <li class="topic-item">
-                                                        Assignment
-                                                    </li>
-                                                    <li class="topic-item">
-                                                        Draw a fc that will input the year of birth of a person & determine, his age. Compute & display the area of a rectangle if he is 18 years old or less & the area of a triangle if not
-                                                    </li>
+                                                    <li class="topic-item"></li>
+                                                    <li class="topic-item"></li>
                                                 </ul>
                                             </div>
                                         </div>
