--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-list">
-                                                        - Group Performance
+                                                        
                                                     </li>
                                                     <!-- <li class="topic-item">
                                                         <div class="parent">
@@ -575,10 +575,7 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - QUIZ 2
-                                                    </li>
-                                                    <li class="topic-item">
-                                                        - Group Project / Video Presentation (OCT 4)
+                                                        
                                                     </li>
                                                 </ul>
                                             </div>
@@ -778,7 +775,6 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - Bring a 3 meters UTP cable
                                                     </li>
                                                 </ul>
                                             </div>
@@ -999,13 +995,7 @@
                                                 <p><i class="fa-solid fa-bell"></i> Reminder/s</p>
                                                 <ul class="topic-list">
                                                     <li class="topic-item">
-                                                        - Assignment
-                                                    </li>
-                                                    <li class="topic-item">
                                                         - Lecture of Lesson 1 to 3
-                                                    </li>
-                                                    <li class="topic-item">
-                                                        - <i>Tula</i> (October 13)
                                                     </li>
                                                 </ul>
                                             </div>
@@ -1030,7 +1020,7 @@
                                 </div>
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>NSTP 11</span></p>
-                                    <p>National Training Service Program 1</p>
+                                    <p>National Service Training Program 1</p>
                                     <p>SAT 8:00 AM - 11:00 AM</p>
                                     <p>TBA</p>
                                     <div id="schedule13" class="schedule"></div>
