--- a/index.html
+++ b/index.html
@@ -844,7 +844,7 @@
                                     <span class="fade-neust">NEUST</sp>
                                 </div>
                                 <div class="sub-card-top-left">
-                                    <p>CODE: <span>KOMFIL</span></p>
+                                    <p>CODE: <span>FIL 1</span></p>
                                     <p>Kontekswalisadong Komunikasyon sa Filipino</p>
                                     <p>TH 1:00 PM - 2:30 PM</p>
                                     <p>RM 107</p>
