--- a/index.html
+++ b/index.html
@@ -814,7 +814,7 @@
                                                             </li>
                                                             <li class="module-item">
                                                                 Source <a
-                                                                    href="https://bsit1a2324.s3.us-west-1.amazonaws.com/ITNET01/ITNET01+Reference+Book.pdf"><i
+                                                                    href="https://bsit1a2324.s3.us-west-1.amazonaws.com/ITNET01/ITNET01+Reference+Book.pdf" target="_blank"><i
                                                                         class="fa-solid fa-link"></i>
                                                                     bsit1a2324.s3.us-west-1.amazonaws.com</a>
                                                             </li>
