--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <span class="bar"></span>
                 </div>
                 <div class="section-name" data-aos="fade-down" data-aos-duration="500" data-aos-delay="200">
-                    <h4>BSIT-1A</h4>
+                    <h4>BSIT 1A</h4>
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item" data-aos="fade-down" data-aos-duration="500" data-aos-delay="100">
@@ -43,9 +43,6 @@
                     <li class="nav-item" data-aos="fade-down" data-aos-duration="500" data-aos-delay="300">
                         <a href="#schedule" class="nav-link"><i class="fa fa-solid fa-calendar"></i> Schedule</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a href="" class="nav-link"><i class="fa fa-solid fa-info"></i> About</a>
-                    </li> -->
                     <hr class="section-divider">
                     <li class="nav-item" data-aos="fade-down" data-aos-duration="500" data-aos-delay="400">
                         <label class="switch">
@@ -229,7 +226,6 @@
                                         </div>
                                         <div class="m-1-body content-body">
                                             <div class="topic-body">
-                                                
                                                 <ul class="topic-list">
                                                     <li class="topic-item" id="m_1_content"></li>
                                                 </ul>
@@ -1172,7 +1168,7 @@
         <div class="page_d" id="">
             <div class="page_d_title" data-aos="fade-up" data-aos-duration="500" data-aos-delay="100">
                 <p>
-                    Students of the Week
+                    STUDENTS OF THE WEEK
                 </p>
             </div>
             <div class="page_d_container">
