--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
                                 </div>
                                 <div class="sub-card-top-left">
                                     <p>CODE: <span>PE 1</span></p>
-                                    <p>Advanced Gymnastics</p>
+                                    <p>Pathfit</p>
                                     <p>T 10:00 AM - 12:00 PM</p>
                                     <p>TBA</p>
                                     <div id="schedule4" class="schedule"></div>
