--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
                                             <div class="topic-body">
                                                 
                                                 <ul class="topic-list">
-                                                    <li class="topic-list" id="t_2_content"></li>
+                                                    <li class="topic-item" id="t_2_content"></li>
                                                     <!-- <li class="topic-item">
                                                         <div class="parent">
                                                             <div class="child1">
