--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             </div>
                             <div class="sub-card-bottom">
                                 <div class="sub-card-bottom-left">
-                                    Leona, Rodibelle Figueroa <br><span>(or Ma'am Arvee)</span>
+                                    Leona, Rodibelle Figueroa <br><span>or Ma'am Arvee</span>
                                 </div>
                                 <div class="sub-card-bottom-right">
                                     <button class="btnn m-1 schedbutton">Enter <i
@@ -716,7 +716,7 @@
                             </div>
                             <div class="sub-card-bottom">
                                 <div class="sub-card-bottom-left">
-                                    Leona, Rodibelle Figueroa <br><span>(or Ma'am Arvee)</span>
+                                    Leona, Rodibelle Figueroa <br><span>or Ma'am Arvee</span>
                                 </div>
                                 <div class="sub-card-bottom-right">
                                     <button class="btnn w-3 schedbutton">Enter <i
