--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="images/1A.png">
     <link rel="stylesheet" href="CSS/style.css">
-    <title>BSIT 1A</title>
+    <title>BSIT 1-A</title>
 </head>
 
 <body>
@@ -31,7 +31,7 @@
                     <span class="bar"></span>
                 </div>
                 <div class="section-name" data-aos="fade-down" data-aos-duration="500" data-aos-delay="200">
-                    <h4>BSIT 1A</h4>
+                    <h4>BSIT 1-A</h4>
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item" data-aos="fade-down" data-aos-duration="500" data-aos-delay="100">
