--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
                                                     <i class="fa-solid fa-clipboard"></i> Copy Text
                                                 </button>
                                                 <button class="help-button">
-                                                    <a href="https://m.me/michaella.nicolette" target="_blank">Help? <i class="fas fa-question-circle"></i></a>
+                                                    <a href="https://m.me/leerossapan" target="_blank">Help? <i class="fas fa-question-circle"></i></a>
                                                 </button>
                                             </div>
                                         </div>
@@ -332,7 +332,7 @@
                                                     <i class="fa-solid fa-clipboard"></i> Copy Text
                                                 </button>
                                                 <button class="help-button">
-                                                    <a href="https://m.me/michaella.nicolette" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                                    <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                                 </button>
                                             </div>
                                         </div>
@@ -420,7 +420,7 @@
                                                     <i class="fa-solid fa-clipboard"></i> Copy Text
                                                 </button>
                                                 <button class="help-button">
-                                                    <a href="https://m.me/michaella.nicolette" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                                    <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                                 </button>
                                             </div>
                                         </div>
@@ -486,7 +486,7 @@
                                                     <i class="fa-solid fa-clipboard"></i> Copy Text
                                                 </button>
                                                 <button class="help-button">
-                                                    <a href="https://m.me/michaella.nicolette" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                                    <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                                 </button>
                                             </div>
                                         </div>
@@ -588,7 +588,7 @@
                                                     <i class="fa-solid fa-clipboard"></i> Copy Text
                                                 </button>
                                                 <button class="help-button">
-                                                    <a href="https://m.me/michaella.nicolette" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                                    <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                                 </button>
                                             </div>
                                         </div>
@@ -676,7 +676,7 @@
                                                     <i class="fa-solid fa-clipboard"></i> Copy Text
                                                 </button>
                                                 <button class="help-button">
-                                                    <a href="https://m.me/michaella.nicolette" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                                    <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                                 </button>
                                             </div>
                                         </div>
@@ -748,7 +748,7 @@
                                                     <i class="fa-solid fa-clipboard"></i> Copy Text
                                                 </button>
                                                 <button class="help-button">
-                                                    <a href="https://m.me/michaella.nicolette" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                                    <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                                 </button>
                                             </div>
                                         </div>
@@ -820,7 +820,7 @@
                                                     <i class="fa-solid fa-clipboard"></i> Copy Text
                                                 </button>
                                                 <button class="help-button">
-                                                    <a href="https://m.me/michaella.nicolette" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                                    <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                                 </button>
                                             </div>
                                         </div>
@@ -899,7 +899,7 @@
                                                     <i class="fa-solid fa-clipboard"></i> Copy Text
                                                 </button>
                                                 <button class="help-button">
-                                                    <a href="https://m.me/michaella.nicolette" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                                    <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                                 </button>
                                             </div>
                                         </div>
@@ -985,7 +985,7 @@
                                                     <i class="fa-solid fa-clipboard"></i> Copy Text
                                                 </button>
                                                 <button class="help-button">
-                                                    <a href="https://m.me/michaella.nicolette" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                                    <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                                 </button>
                                             </div>
                                         </div>
@@ -1073,7 +1073,7 @@
                                                     <i class="fa-solid fa-clipboard"></i> Copy Text
                                                 </button>
                                                 <button class="help-button">
-                                                    <a href="https://m.me/michaella.nicolette" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                                    <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                                 </button>
                                             </div>
                                         </div>
@@ -1163,7 +1163,7 @@
                                                     <i class="fa-solid fa-clipboard"></i> Copy Text
                                                 </button>
                                                 <button class="help-button">
-                                                    <a href="https://m.me/michaella.nicolette" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                                    <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                                 </button>
                                             </div>
                                         </div>
@@ -1257,7 +1257,7 @@
                                                     <i class="fa-solid fa-clipboard"></i> Copy Text
                                                 </button>
                                                 <button class="help-button">
-                                                    <a href="https://m.me/michaella.nicolette" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
+                                                    <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                                 </button>
                                             </div>
                                         </div>
