--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
                                 </div>
                                 <div class="sub-card-top-right">
                                     <img src="images/cc101.png" alt="cc101">
+                                    <img src="images/CICT.png" alt="CICT">
                                 </div>
                             </div>
                             <div class="sub-card-bottom">
@@ -246,7 +247,7 @@
                                                     <i class="fa-solid fa-clipboard"></i> Copy Text
                                                 </button>
                                                 <button class="help-button">
-                                                    <a href="https://m.me/leerossapan" target="_blank">Help? <i class="fas fa-question-circle"></i></a>
+                                                    <a href="https://m.me/leerossapan" target="_blank"><i class="fas fa-question-circle"></i> Help?</a>
                                                 </button>
                                             </div>
                                         </div>
@@ -731,6 +732,11 @@
                                                                         class="fa-solid fa-link"></i>
                                                                     bsit1a2324.s3.us-west-1.amazonaws.com</a>
                                                             </li>
+                                                            <li class="module-item">
+                                                                <a href="FILES/ITNET01/IT-NET01-Reviewer.pdf" download><i
+                                                                        class="fa-regular fa-file-pdf"></i> 
+                                                                        ITNET01-Reviewer</a>
+                                                            </li>
                                                         </ul>
                                                     </div>
                                                 </div>
@@ -881,6 +887,11 @@
                                                                     href="https://bsit1a2324.s3.us-west-1.amazonaws.com/ITNET01/ITNET01+Reference+Book.pdf"><i
                                                                         class="fa-solid fa-link"></i>
                                                                     bsit1a2324.s3.us-west-1.amazonaws.com</a>
+                                                            </li>
+                                                            <li class="module-item">
+                                                                <a href="FILES/ITNET01/IT-NET01-Reviewer.pdf" download><i
+                                                                        class="fa-regular fa-file-pdf"></i> 
+                                                                        ITNET01-Reviewer</a>
                                                             </li>
                                                         </ul>
                                                     </div>
