--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <title>BSIT 1-A</title>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
     <section class="intro" id="intro">
         <header class="header">
             <nav class="navbar">
