--- a/index.html
+++ b/index.html
@@ -36,7 +36,12 @@
                     <span class="bar"></span>
                     <span class="bar"></span>
                 </div>
-                <div class="section-name" data-aos="fade-down" data-aos-duration="500" data-aos-delay="200">
+                <div class="section-name"
+                    data-aos="fade-zoom-in" 
+                    data-aos-easing="ease"
+                    data-aos-duration="500" 
+                    data-aos-delay="100"
+                >
                     <h4>BSIT 1-A</h4>
                 </div>
                 <ul class="nav-menu">
@@ -69,7 +74,11 @@
                     </li>
                 </ul>
                 <a href="https://neust.edu.ph/" target="_blank" class="nav-logo"
-                    data-aos="fade-left" data-aos-duration="500" data-aos-delay="300">
+                    data-aos="fade-zoom-in" 
+                    data-aos-easing="ease"
+                    data-aos-duration="500" 
+                    data-aos-delay="100"
+                >
                     <img src="images/NEUST-inner.png" alt="cict">
                     <img src="images/NEUST-outer.png" alt="cict">
                 </a>
