--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     <title>BSIT 1-A</title>
 </head>
 
-<body oncontextmenu="return false;">
+<!-- <body oncontextmenu="return false;"> -->
+<body>
     <section class="intro" id="intro">
         <header class="header">
             <nav class="navbar">
@@ -121,9 +122,9 @@
                 </div>
             </div>
             <div class="shape-container" 
+                data-aos-offset="10"
                 data-aos="fade-zoom-in" 
                 data-aos-easing="ease-in-back" 
-                data-aos-offset="0"
                 data-aos-duration="1500"
                 data-aos-delay="1000"
             >
