--- a/index.html
+++ b/index.html
@@ -22,8 +22,7 @@
     <title>BSIT 1-A</title>
 </head>
 
-<!-- <body oncontextmenu="return false;"> -->
-<body>
+<body oncontextmenu="return false;">
     <section class="intro" id="intro">
         <header class="header">
             <nav class="navbar">
