--- a/index.html
+++ b/index.html
@@ -1550,11 +1550,34 @@
 </script>
 <script defer src="/_vercel/insights/script.js"></script>
 <script>
-    const checkbox = document.querySelector("input[type='checkbox']");
+    
+const checkbox = document.querySelector("input[type='checkbox']");
 
-    checkbox.addEventListener("click", () => {
-        document.body.classList.toggle("dark");
-    })
+// Function to set the dark mode preference in localStorage
+function setDarkModePreference(isDarkMode) {
+    localStorage.setItem('darkMode', isDarkMode);
+}
+
+// Function to toggle dark mode
+function toggleDarkMode() {
+    const isDarkMode = document.body.classList.contains("dark");
+    document.body.classList.toggle("dark", !isDarkMode);
+    setDarkModePreference(!isDarkMode);
+}
+
+// Check localStorage for dark mode preference on page load
+function checkDarkModePreference() {
+    const isDarkMode = localStorage.getItem('darkMode') === 'true';
+    document.body.classList.toggle('dark', isDarkMode);
+    checkbox.checked = isDarkMode;
+}
+
+// Attach the event listener for the checkbox
+checkbox.addEventListener("click", toggleDarkMode);
+
+// Check for user's preference on page load
+checkDarkModePreference();
+
 </script>
 <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script src="../dist/aos.js"></script>
