--- a/index.html
+++ b/index.html
@@ -26,15 +26,13 @@
     <section class="intro" id="intro">
         <header class="header">
             <nav class="navbar">
-                <div class="hamburger" 
-                        data-aos="fade-zoom-in" 
-                        data-aos-easing="ease"
-                        data-aos-duration="500" 
-                        data-aos-delay="100"
-                    >
-                    <span class="bar"></span>
-                    <span class="bar"></span>
-                    <span class="bar"></span>
+                <div id="menuToggle">
+                    <input id="checkbox" type="checkbox">
+                    <label class="toggle" for="checkbox">
+                        <div class="bar bar--top"></div>
+                        <div class="bar bar--middle"></div>
+                        <div class="bar bar--bottom"></div>
+                    </label>
                 </div>
                 <div class="section-name"
                     data-aos="fade-zoom-in" 
