--- a/index.html
+++ b/index.html
@@ -26,9 +26,14 @@
     <section class="intro" id="intro">
         <header class="header">
             <nav class="navbar">
-                <div id="menuToggle">
+                <div id="menuToggle"
+                    data-aos="fade-zoom-in" 
+                    data-aos-easing="ease"
+                    data-aos-duration="500" 
+                    data-aos-delay="100"
+                    >
                     <input id="checkbox" type="checkbox">
-                    <label class="toggle" for="checkbox">
+                    <label class="togglE" for="checkbox">
                         <div class="bar bar--top"></div>
                         <div class="bar bar--middle"></div>
                         <div class="bar bar--bottom"></div>
