--- a/index.html
+++ b/index.html
@@ -1554,7 +1554,7 @@
 <script defer src="/_vercel/insights/script.js"></script>
 <script>
     
-const checkbox = document.querySelector("input[type='checkbox']");
+const checkbox = document.querySelector(".input");
 
 // Function to set the dark mode preference in localStorage
 function setDarkModePreference(isDarkMode) {
