--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     data-aos-delay="100"
                     >
                     <input id="checkbox" type="checkbox">
-                    <label class="toggle" for="checkbox">
+                    <label class="togglE" for="checkbox">
                         <div class="bar bar--top"></div>
                         <div class="bar bar--middle"></div>
                         <div class="bar bar--bottom"></div>
