--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
             content="width=device-width, 
                     initial-scale=1.0, 
                     user-scalable=no">
+    <meta property="og:title" content="BSIT 1-A Directory">
+    <meta property="og:description" content="Enhance your academic experience with the BSIT 1-A Class Directory">
+    <meta property="og:image" content="https://sumacab1absit.vercel.app/images/CICT.png">
+    <meta property="og:url" content="https://sumacab1absit.vercel.app">
+    <meta property="og:type" content="website">
     <link   rel="stylesheet" 
             href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
             integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
