--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             content="width=device-width, 
                     initial-scale=1.0, 
                     user-scalable=no">
-    <meta property="og:title" content="BSIT 1-A Directory">
+    <meta property="og:title" content="BSIT 1-A Class Directory">
     <meta property="og:description" content="Enhance your academic experience with the BSIT 1-A Class Directory">
     <meta property="og:image" content="https://sumacab1absit.vercel.app/images/1A.png">
     <meta property="og:url" content="https://sumacab1absit.vercel.app">
