--- a/index.html
+++ b/index.html
@@ -570,7 +570,22 @@
                                                     <li class="module-item">
                                                         <a href="FILES/PE 1/PATHFit-1-Module-Unit-2.pdf"
                                                             download><i class="fa-regular fa-file-pdf"></i>
-                                                            PATHFit-1-Module-Unit-2 PDF</a>
+                                                            PATHFit-1-Module-Unit-2</a>
+                                                    </li>
+                                                    <li class="module-item">
+                                                        <a href="FILES/PE 1/PATHFit-1-Module-Unit-2.docx"
+                                                            download><i class="fa-regular fa-file-docx"></i>
+                                                            PATHFit-1-Module-Unit-2</a>
+                                                    </li>
+                                                    <li class="module-item">
+                                                        <a href="FILES/PE 1/PATHFit-1-Module-Unit-3.pdf"
+                                                            download><i class="fa-regular fa-file-pdf"></i>
+                                                            Module-Unit-3</a>
+                                                    </li>
+                                                    <li class="module-item">
+                                                        <a href="FILES/PE 1/PATHFit-1-Module-Unit-2.docx"
+                                                            download><i class="fa-regular fa-file-docx"></i>
+                                                            Module-Unit-3</a>
                                                     </li>
                                                 </ul>
                                             </div>
