--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
                                                     </li>
                                                     <li class="module-item">
                                                         <a href="FILES/PE 1/PATHFit-1-Module-Unit-2.docx"
-                                                            download><i class="fa-regular fa-file-docx"></i>
+                                                            download><i class="fa-regular fa-file-word"></i>
                                                             PATHFit-1-Module-Unit-2</a>
                                                     </li>
                                                     <li class="module-item">
@@ -584,7 +584,7 @@
                                                     </li>
                                                     <li class="module-item">
                                                         <a href="FILES/PE 1/PATHFit-1-Module-Unit-2.docx"
-                                                            download><i class="fa-regular fa-file-docx"></i>
+                                                            download><i class="fa-regular fa-file-word"></i>
                                                             Module-Unit-3</a>
                                                     </li>
                                                 </ul>
