--- a/index.html
+++ b/index.html
@@ -165,7 +165,12 @@
             </div>
             <div class="president">
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="200">
-                    <img src="images/officer1.png" alt="Officer1">
+                    <img 
+                        data-src="images/officer1_lazy.png"
+                        src="images/officer1.png"
+                        alt="Officer1"
+                        class="lazy-load"
+                    >
                     <div class="officer-details">
                         <h3>PRESIDENT</h3>
                         <p>AJ Capule</p>
@@ -174,42 +179,72 @@
             </div>
             <div class="team">
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="300">
-                    <img src="images/officer2.png" alt="Officer 2">
+                    <img
+                        data-src="images/officer2_lazy.png"
+                        src="images/officer2.png"
+                        alt="Officer2"
+                        class="lazy-load"
+                    >
                     <div class="officer-details">
                         <h3>VICE PRESIDENT</h3>
                         <p>Marnie Shynne Clamonte</p>
                     </div>
                 </div>
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="400">
-                    <img src="images/officer3.png" alt="Officer 3">
+                    <img 
+                        data-src="images/officer3_lazy.png"
+                        src="images/officer3.png"
+                        alt="Officer3"
+                        class="lazy-load"
+                    >
                     <div class="officer-details">
                         <h3>SECRETARY</h3>
                         <p>Michaella Nicole Ramos</p>
                     </div>
                 </div>
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="500">
-                    <img src="images/officer4.png" alt="Officer 4">
+                    <img                         
+                        data-src="images/officer4_lazy.png"
+                        src="images/officer4.png"
+                        alt="Officer4"
+                        class="lazy-load"
+                    >
                     <div class="officer-details">
                         <h3>AUDITOR</h3>
                         <p>Sarrah Quijano</p>
                     </div>
                 </div>
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="600">
-                    <img src="images/officer5.png" alt="Officer 5">
+                    <img 
+                        data-src="images/officer5_lazy.png"
+                        src="images/officer5.png"
+                        alt="Officer5"
+                        class="lazy-load"
+                        >
                     <div class="officer-details">
                         <h3>TREASURER</h3>
                         <p>Aljon Rey Apan</p>
                     </div>
                 </div>
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="700">
-                    <img src="images/officer6.png" alt="Officer 5">
+                    <img 
+                        data-src="images/officer6_lazy.png"
+                        src="images/officer6.png"
+                        alt="Officer6"
+                        class="lazy-load"
+                    >
                     <div class="officer-details">
                         <h3>BUSINESS <br>MANAGER</h3>
                         <p>Leon Laborina</p>
                     </div>
                 </div>
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="800">
-                    <img src="images/officer7.png" alt="Officer 6">
+                    <img 
+                        data-src="images/officer7_laz.png"
+                        src="images/officer7.png"
+                        alt="Officer7"
+                        class="lazy-load"
+                    >
                     <div class="officer-details">
                         <h3>P.R.O.</h3>
                         <p>Lee Ross Gonzales</p>
