--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 </div>
                 <div class="officer" data-aos="fade-up" data-aos-duration="500" data-aos-delay="800">
                     <img 
-                        data-src="images/officer7_laz.png"
+                        data-src="images/officer7_lazy.png"
                         src="images/officer7.png"
                         alt="Officer7"
                         class="lazy-load"
